// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authenticator App Setup should render the screens correctly 1`] = `
<body
  style="overflow: hidden;"
>
  <div />
  <div>
    <div
      class="react-responsive-modal-root"
      data-testid="root"
    >
      <div
        aria-hidden="true"
        class="react-responsive-modal-overlay modal-overlay"
        data-testid="overlay"
        style="animation: react-responsive-modal-overlay-in 300ms;"
      />
      <div
        class="react-responsive-modal-container"
        data-testid="modal-container"
      >
        <div
          aria-modal="true"
          class="react-responsive-modal-modal"
          data-testid="modal"
          role="dialog"
          style="animation: react-responsive-modal-modal-in 300ms;"
          tabindex="-1"
        >
          <div>
            <div
              class="flex flex-col modal-container"
            >
              <div
                class="flex flex-row justify-between modal-header items-center relative"
              >
                <div
                  tabindex="1"
                />
                <img
                  alt="bcbst logo"
                  class="modal-icon modal-header-logo absolute m-auto left-0 right-0"
                  data-nimg="1"
                  decoding="async"
                  height="40"
                  loading="lazy"
                  src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                  srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                  style="color: transparent;"
                  width="40"
                />
                <div
                  class="size-8 focus-icon"
                  tabindex="0"
                >
                  <img
                    alt="close"
                    class="size-4"
                    data-nimg="1"
                    decoding="async"
                    height="40"
                    loading="lazy"
                    src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                    srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                    style="color: transparent;"
                    width="40"
                  />
                </div>
              </div>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
              />
              <div
                class="flex flex-row flex-grow justify-center"
              >
                <div
                  class="flex flex-row justify-center modal-content"
                >
                  <div
                    class="flex flex-col items-center"
                  >
                    <span
                      style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
                    />
                    <h2
                      class="title-2"
                    >
                      Authenticator App Setup
                    </h2>
                    <span
                      style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                    />
                    <p
                      class="body-1 body-1 text-center"
                    >
                      Scan the QR Code or manually type the secret key into your authenticator app then enter the security code.
                    </p>
                    <div
                      class="flex flex-col w-[358px]"
                    >
                      <span
                        style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                      />
                      <div
                        class="flex flex-col items-center"
                      >
                        <div
                          style="min-width: 132px; height: 132px;"
                        >
                          <div>
                            <canvas
                              height="128"
                              style="height: 128px; width: 128px;"
                              width="128"
                            />
                          </div>
                        </div>
                        <span
                          style="display: block; width: 1px; min-width: 1px; height: 24px; min-height: 24px;"
                        />
                        <p
                          class="body-1 body-1 font-bold"
                        >
                          Secret Key:
                        </p>
                        <span
                          style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
                        />
                        <p
                          class="body-1"
                        >
                          ZEHLSQVDBQACU44JEF2BGVJ45KHFRDYJ
                        </p>
                        <span
                          style="display: block; width: 1px; min-width: 1px; height: 24px; min-height: 24px;"
                        />
                        <div
                          class=""
                          style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                        />
                        <span
                          style="display: block; width: 1px; min-width: 1px; height: 24px; min-height: 24px;"
                        />
                        <div
                          class="flex flex-col "
                        >
                          <label
                            class="mb-1 "
                            for="input-enter-security-code"
                          >
                            Enter Security Code
                          </label>
                          <input
                            aria-invalid="false"
                            aria-label="Enter Security Code"
                            aria-required="false"
                            class="input  "
                            id="input-enter-security-code"
                            type="text"
                            value=""
                          />
                        </div>
                        <span
                          style="display: block; width: 1px; min-width: 1px; height: 24px; min-height: 24px;"
                        />
                      </div>
                      <button
                        aria-label="Confirm"
                        class="button-text primary text-center flex flex-row justify-center items-center min-w-fit inactive font-bold active"
                        type="button"
                      >
                        Confirm
                      </button>
                      <span
                        style="display: block; width: 1px; min-width: 1px; height: 24px; min-height: 24px;"
                      />
                    </div>
                    <a
                      aria-label="Cancel"
                      style="display: block;"
                    >
                      <button
                        class="flex flex-row link-container undefined"
                        style="max-width: max-content; height: auto; display: block;"
                        tabindex="-1"
                        type="button"
                      >
                        <p
                          class="link undefined"
                        >
                          Cancel
                        </p>
                      </button>
                    </a>
                  </div>
                </div>
              </div>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
              />
              <div
                class="flex flex-row justify-center modal-footer"
              >
                <img
                  alt="bcbst logo"
                  class="modal-icon"
                  data-nimg="1"
                  decoding="async"
                  height="40"
                  loading="lazy"
                  src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                  srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                  style="color: transparent;"
                  width="40"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Authenticator App Setup should render the screens correctly 2`] = `
<body
  style="overflow: hidden;"
>
  <div />
  <div>
    <div
      class="react-responsive-modal-root"
      data-testid="root"
    >
      <div
        aria-hidden="true"
        class="react-responsive-modal-overlay modal-overlay"
        data-testid="overlay"
        style="animation: react-responsive-modal-overlay-in 300ms;"
      />
      <div
        class="react-responsive-modal-container"
        data-testid="modal-container"
      >
        <div
          aria-modal="true"
          class="react-responsive-modal-modal"
          data-testid="modal"
          role="dialog"
          style="animation: react-responsive-modal-modal-in 300ms;"
          tabindex="-1"
        >
          <div>
            <div
              class="flex flex-col modal-container"
            >
              <div
                class="flex flex-row justify-between modal-header items-center relative"
              >
                <div
                  tabindex="1"
                />
                <img
                  alt="bcbst logo"
                  class="modal-icon modal-header-logo absolute m-auto left-0 right-0"
                  data-nimg="1"
                  decoding="async"
                  height="40"
                  loading="lazy"
                  src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                  srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                  style="color: transparent;"
                  width="40"
                />
                <div
                  class="size-8 focus-icon"
                  tabindex="0"
                >
                  <img
                    alt="close"
                    class="size-4"
                    data-nimg="1"
                    decoding="async"
                    height="40"
                    loading="lazy"
                    src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                    srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                    style="color: transparent;"
                    width="40"
                  />
                </div>
              </div>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
              />
              <div
                class="flex flex-row flex-grow justify-center"
              >
                <div
                  class="flex flex-row justify-center modal-content"
                >
                  <div
                    class="flex flex-col items-center"
                  >
                    <img
                      alt="success"
                      class="size-[80px]"
                      data-nimg="1"
                      decoding="async"
                      height="40"
                      loading="lazy"
                      src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                      srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                      style="color: transparent;"
                      width="40"
                    />
                    <span
                      style="display: block; width: 1px; min-width: 1px; height: 24px; min-height: 24px;"
                    />
                    <h1
                      class="title-1 title-2"
                    >
                      Authenticator App Setup Complete
                    </h1>
                    <span
                      style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                    />
                    <div
                      class="flex flex-col w-[358px]"
                    >
                      <div
                        class="flex flex-col items-center"
                      >
                        <p
                          class="body-1 text-center"
                        >
                          The next time you login, you'll generate a code through your authenticator app.
                        </p>
                        <span
                          style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
                        />
                      </div>
                      <span
                        style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
                      />
                      <button
                        aria-label="Done"
                        class="button-text primary text-center flex flex-row justify-center items-center min-w-fit null undefined"
                        type="button"
                      >
                        Done
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
              />
              <div
                class="flex flex-row justify-center modal-footer"
              >
                <img
                  alt="bcbst logo"
                  class="modal-icon"
                  data-nimg="1"
                  decoding="async"
                  height="40"
                  loading="lazy"
                  src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                  srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                  style="color: transparent;"
                  width="40"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Authenticator App Setup should render the screens without error when we close the modal previously with error 1`] = `
<body
  style="overflow: hidden;"
>
  <div />
  <div>
    <div
      class="react-responsive-modal-root"
      data-testid="root"
    >
      <div
        aria-hidden="true"
        class="react-responsive-modal-overlay modal-overlay"
        data-testid="overlay"
        style="animation: react-responsive-modal-overlay-in 300ms;"
      />
      <div
        class="react-responsive-modal-container"
        data-testid="modal-container"
      >
        <div
          aria-modal="true"
          class="react-responsive-modal-modal"
          data-testid="modal"
          role="dialog"
          style="animation: react-responsive-modal-modal-in 300ms;"
          tabindex="-1"
        >
          <div>
            <div
              class="flex flex-col modal-container"
            >
              <div
                class="flex flex-row justify-between modal-header items-center relative"
              >
                <div
                  tabindex="1"
                />
                <img
                  alt="bcbst logo"
                  class="modal-icon modal-header-logo absolute m-auto left-0 right-0"
                  data-nimg="1"
                  decoding="async"
                  height="40"
                  loading="lazy"
                  src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                  srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                  style="color: transparent;"
                  width="40"
                />
                <div
                  class="size-8 focus-icon"
                  tabindex="0"
                >
                  <img
                    alt="close"
                    class="size-4"
                    data-nimg="1"
                    decoding="async"
                    height="40"
                    loading="lazy"
                    src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                    srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                    style="color: transparent;"
                    width="40"
                  />
                </div>
              </div>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
              />
              <div
                class="flex flex-row flex-grow justify-center"
              >
                <div
                  class="flex flex-row justify-center modal-content"
                >
                  <div
                    class="flex flex-col items-center"
                  >
                    <span
                      style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
                    />
                    <h2
                      class="title-2"
                    >
                      Authenticator App Setup
                    </h2>
                    <span
                      style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                    />
                    <p
                      class="body-1 body-1 text-center"
                    >
                      Scan the QR Code or manually type the secret key into your authenticator app then enter the security code.
                    </p>
                    <div
                      class="flex flex-col w-[358px]"
                    >
                      <span
                        style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                      />
                      <div
                        class="flex flex-col items-center"
                      >
                        <div
                          style="min-width: 132px; height: 132px;"
                        >
                          <div>
                            <canvas
                              height="128"
                              style="height: 128px; width: 128px;"
                              width="128"
                            />
                          </div>
                        </div>
                        <span
                          style="display: block; width: 1px; min-width: 1px; height: 24px; min-height: 24px;"
                        />
                        <p
                          class="body-1 body-1 font-bold"
                        >
                          Secret Key:
                        </p>
                        <span
                          style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
                        />
                        <p
                          class="body-1"
                        >
                          ZEHLSQVDBQACU44JEF2BGVJ45KHFRDYJ
                        </p>
                        <span
                          style="display: block; width: 1px; min-width: 1px; height: 24px; min-height: 24px;"
                        />
                        <div
                          class=""
                          style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                        />
                        <span
                          style="display: block; width: 1px; min-width: 1px; height: 24px; min-height: 24px;"
                        />
                        <div
                          class="flex flex-col "
                        >
                          <label
                            class="mb-1 "
                            for="input-enter-security-code"
                          >
                            Enter Security Code
                          </label>
                          <input
                            aria-invalid="false"
                            aria-label="Enter Security Code"
                            aria-required="false"
                            class="input  "
                            id="input-enter-security-code"
                            type="text"
                            value=""
                          />
                        </div>
                        <span
                          style="display: block; width: 1px; min-width: 1px; height: 24px; min-height: 24px;"
                        />
                      </div>
                      <button
                        aria-label="Confirm"
                        class="button-text primary text-center flex flex-row justify-center items-center min-w-fit inactive font-bold active"
                        type="button"
                      >
                        Confirm
                      </button>
                      <span
                        style="display: block; width: 1px; min-width: 1px; height: 24px; min-height: 24px;"
                      />
                    </div>
                    <a
                      aria-label="Cancel"
                      style="display: block;"
                    >
                      <button
                        class="flex flex-row link-container undefined"
                        style="max-width: max-content; height: auto; display: block;"
                        tabindex="-1"
                        type="button"
                      >
                        <p
                          class="link undefined"
                        >
                          Cancel
                        </p>
                      </button>
                    </a>
                  </div>
                </div>
              </div>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
              />
              <div
                class="flex flex-row justify-center modal-footer"
              >
                <img
                  alt="bcbst logo"
                  class="modal-icon"
                  data-nimg="1"
                  decoding="async"
                  height="40"
                  loading="lazy"
                  src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                  srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                  style="color: transparent;"
                  width="40"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Authenticator App Setup should render the screens without error when we close the modal previously with error 2`] = `
<body
  style="overflow: hidden;"
>
  <div />
  <div>
    <div
      class="react-responsive-modal-root"
      data-testid="root"
    >
      <div
        aria-hidden="true"
        class="react-responsive-modal-overlay modal-overlay"
        data-testid="overlay"
        style="animation: react-responsive-modal-overlay-in 300ms;"
      />
      <div
        class="react-responsive-modal-container"
        data-testid="modal-container"
      >
        <div
          aria-modal="true"
          class="react-responsive-modal-modal"
          data-testid="modal"
          role="dialog"
          style="animation: react-responsive-modal-modal-in 300ms;"
          tabindex="-1"
        >
          <div>
            <div
              class="flex flex-col modal-container"
            >
              <div
                class="flex flex-row justify-between modal-header items-center relative"
              >
                <div
                  tabindex="1"
                />
                <img
                  alt="bcbst logo"
                  class="modal-icon modal-header-logo absolute m-auto left-0 right-0"
                  data-nimg="1"
                  decoding="async"
                  height="40"
                  loading="lazy"
                  src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                  srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                  style="color: transparent;"
                  width="40"
                />
                <div
                  class="size-8 focus-icon"
                  tabindex="0"
                >
                  <img
                    alt="close"
                    class="size-4"
                    data-nimg="1"
                    decoding="async"
                    height="40"
                    loading="lazy"
                    src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                    srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                    style="color: transparent;"
                    width="40"
                  />
                </div>
              </div>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
              />
              <div
                class="flex flex-row flex-grow justify-center"
              >
                <div
                  class="flex flex-row justify-center modal-content"
                >
                  <div
                    class="flex flex-col items-center"
                  >
                    <span
                      style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
                    />
                    <h2
                      class="title-2"
                    >
                      Authenticator App Setup
                    </h2>
                    <span
                      style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                    />
                    <p
                      class="body-1 body-1 text-center"
                    >
                      Scan the QR Code or manually type the secret key into your authenticator app then enter the security code.
                    </p>
                    <div
                      class="flex flex-col w-[358px]"
                    >
                      <span
                        style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                      />
                      <div
                        class="flex flex-col items-center"
                      >
                        <div
                          style="min-width: 132px; height: 132px;"
                        >
                          <div>
                            <canvas
                              height="128"
                              style="height: 128px; width: 128px;"
                              width="128"
                            />
                          </div>
                        </div>
                        <span
                          style="display: block; width: 1px; min-width: 1px; height: 24px; min-height: 24px;"
                        />
                        <p
                          class="body-1 body-1 font-bold"
                        >
                          Secret Key:
                        </p>
                        <span
                          style="display: block; width: 1px; min-width: 1px; height: 8px; min-height: 8px;"
                        />
                        <p
                          class="body-1"
                        >
                          ZEHLSQVDBQACU44JEF2BGVJ45KHFRDYJ
                        </p>
                        <span
                          style="display: block; width: 1px; min-width: 1px; height: 24px; min-height: 24px;"
                        />
                        <div
                          class=""
                          style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
                        />
                        <span
                          style="display: block; width: 1px; min-width: 1px; height: 24px; min-height: 24px;"
                        />
                        <div
                          class="flex flex-col w-full text-field"
                        >
                          <p>
                            Enter Security Code
                          </p>
                          <div
                            class="flex flex-row items-center input  "
                          >
                            <input
                              aria-label="Enter Security Code"
                              type="text"
                              value=""
                            />
                            <div
                              class="cursor-pointer"
                            />
                          </div>
                          <div
                            class="error-container mt-1 p-1"
                          >
                            <div />
                          </div>
                        </div>
                        <span
                          style="display: block; width: 1px; min-width: 1px; height: 24px; min-height: 24px;"
                        />
                      </div>
                      <button
                        aria-label="Confirm"
                        class="button-text primary text-center flex flex-row justify-center items-center min-w-fit inactive font-bold active"
                        type="button"
                      >
                        Confirm
                      </button>
                      <span
                        style="display: block; width: 1px; min-width: 1px; height: 24px; min-height: 24px;"
                      />
                    </div>
                    <a
                      aria-label="Cancel"
                      style="display: block;"
                    >
                      <button
                        class="flex flex-row link-container undefined"
                        style="max-width: max-content; height: auto; display: block;"
                        tabindex="-1"
                        type="button"
                      >
                        <p
                          class="link undefined"
                        >
                          Cancel
                        </p>
                      </button>
                    </a>
                  </div>
                </div>
              </div>
              <span
                style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
              />
              <div
                class="flex flex-row justify-center modal-footer"
              >
                <img
                  alt="bcbst logo"
                  class="modal-icon"
                  data-nimg="1"
                  decoding="async"
                  height="40"
                  loading="lazy"
                  src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                  srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                  style="color: transparent;"
                  width="40"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
